style(explorer): prevent explorer to overlap footer

--- a/src/app/components/explorer/explorer.component.scss
+++ b/src/app/components/explorer/explorer.component.scss
@@ -1,6 +1,11 @@
 @import '../../styles/variables';
 @import '../../styles/distractionFree';
 
+:host {
+  overflow: auto;
+  padding: 5px;
+  padding-left: 0;
+}
 .explorer {
   background-color: $c_bg_boxes;
   height: 100%;
